syntax = "proto3";

package account;

import "cusman/account/account.proto";

option go_package = "github.com/tunvx/simplebank/grpc/pb/cusman/account";

message GetAccountByIDRequest {
    string account_number = 1;
}

message GetAccountByIDResponse {
    Account account = 1;
}






